--- a/css/codeup-design.css
+++ b/css/codeup-design.css
@@ -1,3 +1,7 @@
+body{
+    background-color: #e6e6e6;
+}
+
 h1{
     font-family: 'Anton', sans-serif;
     /*font-family: 'Abel', sans-serif;*/
@@ -9,6 +13,28 @@ h2{
     font-size: 28px;
     text-align: center;
 }
+
+.icons{
+    /*border-radius: 50%;*/
+    font-family: 'Anton', sans-serif;
+    background-color:#e6563b;
+    height: 105px;
+    padding-top: 2.25em;
+    border-width: thick  !important;
+    /*font-size: 20px;*/
+    /*transform: scale(1.7);*/
+}
+
+.icon-spacing{
+    height: 150px;
+    width: 150px;
+}
+
+h5{
+    font-size: 1em !important;
+
+}
+
 
 /*small*/
 @media (min-width: 576px){
@@ -26,7 +52,10 @@ h2{
     h2{
     /*font-size: 32px;*/
 
+    }
 
+    .icons{
+        transform: scale(1);
     }
 }
 
