--- a/css/codeup-design.css
+++ b/css/codeup-design.css
@@ -21,12 +21,30 @@ h2 {
 .icons {
     /*border-radius: 50%;*/
     font-family: 'Anton', sans-serif;
-    background-color:#e6563b;
+    /*background-color:#e6563b;*/
     height: 105px;
     padding-top: 2.25em;
     border-width: thick  !important;
     /*font-size: 20px;*/
     /*transform: scale(1.7);*/
+    /*font-weight: lighter;*/
+}
+
+.ic-design{
+    background-color:#e6563b;
+
+}
+
+.ic-develop{
+    background-color:#eb9c3b;
+}
+
+.ic-support{
+    background-color:#7cb06c;
+}
+
+.ic-host{
+    background-color:#00aba9;
 }
 
 .icon-spacing {
