--- a/css/codeup-design.css
+++ b/css/codeup-design.css
@@ -12,6 +12,7 @@ h1 {
     font-size: 48px;
     text-align: center;
 }
+
 h2 {
     font-family: 'Anton', sans-serif;
     font-size: 28px;
@@ -24,27 +25,27 @@ h2 {
     /*background-color:#e6563b;*/
     height: 105px;
     padding-top: 2.25em;
-    border-width: thick  !important;
+    border-width: thick !important;
     /*font-size: 20px;*/
     /*transform: scale(1.7);*/
     /*font-weight: lighter;*/
 }
 
-.ic-design{
-    background-color:#e6563b;
+.ic-design {
+    background-color: #e6563b;
 
 }
 
-.ic-develop{
-    background-color:#eb9c3b;
+.ic-develop {
+    background-color: #eb9c3b;
 }
 
-.ic-support{
-    background-color:#7cb06c;
+.ic-support {
+    background-color: #7cb06c;
 }
 
-.ic-host{
-    background-color:#00aba9;
+.ic-host {
+    background-color: #00aba9;
 }
 
 .icon-spacing {
@@ -69,20 +70,26 @@ img {
 }
 
 /*small*/
-@media (min-width: 576px){
+@media (min-width: 576px) {
     h1 {
         font-size: 32px;
     }
-    #visual-design-h   {
+
+    #visual-design-h {
         text-align: right;
     }
+
     #web-dev-h {
         text-align: left;
 
     }
 
     h2 {
-    /*font-size: 32px;*/
+        /*font-size: 32px;*/
+    }
+
+    .featured {
+        font-size: .7em;
     }
 }
 
@@ -102,6 +109,7 @@ img {
     h1 {
         font-size: 48px;
     }
+
     h2 {
         font-size: 32px;
     }
@@ -112,7 +120,7 @@ img {
 }
 
 /*extra large*/
-@media (min-width: 1200px){
+@media (min-width: 1200px) {
     h1 {
         font-size: 64px;
     }
