Finished large icons at all breakpoints

--- a/css/codeup-design.css
+++ b/css/codeup-design.css
@@ -24,7 +24,7 @@ h2 {
     font-family: 'Anton', sans-serif;
     /*background-color:#e6563b;*/
     height: 105px;
-    padding-top: 2.25em;
+    width: 105px;
     border-width: thick !important;
     /*font-size: 20px;*/
     /*transform: scale(1.7);*/
